--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.9",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
